Complete movement of vajram.yamls to Annotated fields